manifests/monad/cloudflare-ddns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-ddns
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: cloudflare-ddns
  namespace: cloudflare-ddns
  labels:
    app: cloudflare-ddns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-ddns
  strategy:
    type: Recreate
  template:
    metadata:
      name: cloudflare-ddns
      labels:
        app: cloudflare-ddns
    spec:
      containers:
      - image: "timothyjmiller/cloudflare-ddns:latest"
        name: cloudflare-ddns
