manifests/monad/minecraft.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
---
apiVersion: "traefik.io/v1alpha1"
kind: IngressRouteTCP
metadata:
  name: minecraft-ingressroutetcp
  namespace: minecraft
spec:
  entryPoints:
  - minecraft-tcp
  routes:
  - match: "HostSNI(`*`)"
    services:
    - name: minecraft
      port: 25565
      weight: 10
