manifests/monad/openclaw.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openclaw
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: openclaw
  namespace: openclaw
  labels:
    app: openclaw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclaw
  strategy:
    type: Recreate
  template:
    metadata:
      name: openclaw
      labels:
        app: openclaw
    spec:
      containers:
      - image: "ghcr.io/openclaw/openclaw:latest"
        name: openclaw
        ports:
        - containerPort: 18789
          protocol: TCP
        volumeMounts:
        - mountPath: "/home/node/.openclaw"
          name: openclaw-pvc-volume
        imagePullPolicy: Always
      volumes:
      - name: openclaw-pvc-volume
        persistentVolumeClaim:
          claimName: openclaw-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: openclaw
  namespace: openclaw
  labels:
    app: openclaw
spec:
  selector:
    app: openclaw
  ports:
  - port: 18789
    targetPort: 18789
    protocol: TCP
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: openclaw
  namespace: openclaw
  annotations:
    "cert-manager.io/cluster-issuer": letsencrypt-prod
    "cert-manager.io/private-key-algorithm": ECDSA
    "traefik.ingress.kubernetes.io/router.entrypoints": "web,websecure"
    "traefik.ingress.kubernetes.io/router.middlewares": "default-hsts-middleware@kubernetescrd,default-https-redirect-middleware@kubernetescrd,default-local-ipwhitelist@kubernetescrd"
spec:
  rules:
  - host: "openclaw.app.zeromap.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: openclaw
            port:
              number: 18789
  tls:
  - hosts:
    - "openclaw.app.zeromap.net"
    secretName: openclaw-cert
