manifests/monad/paseo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paseo
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: paseo
  namespace: paseo
  labels:
    app: paseo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paseo
  strategy:
    type: Recreate
  template:
    metadata:
      name: paseo
      labels:
        app: paseo
    spec:
      containers:
      - image: "ghcr.io/getpaseo/paseo:latest"
        name: paseo
        ports:
        - containerPort: 6767
          protocol: TCP
        volumeMounts:
        - mountPath: "/home/paseo"
          name: paseo-home-volume
        imagePullPolicy: Always
      volumes:
      - name: paseo-home-volume
        persistentVolumeClaim:
          claimName: paseo-home
---
apiVersion: v1
kind: Service
metadata:
  name: paseo
  namespace: paseo
  labels:
    app: paseo
spec:
  selector:
    app: paseo
  ports:
  - port: 6767
    targetPort: 6767
    protocol: TCP
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: paseo
  namespace: paseo
  annotations:
    "cert-manager.io/cluster-issuer": letsencrypt-prod
    "cert-manager.io/private-key-algorithm": ECDSA
    "traefik.ingress.kubernetes.io/router.entrypoints": "web,websecure"
    "traefik.ingress.kubernetes.io/router.middlewares": "default-hsts-middleware@kubernetescrd,default-https-redirect-middleware@kubernetescrd,default-local-ipwhitelist@kubernetescrd"
spec:
  rules:
  - host: "paseo.app.zeromap.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: paseo
            port:
              number: 6767
  tls:
  - hosts:
    - "paseo.app.zeromap.net"
    secretName: paseo-cert
