manifests/monad/sunset-relay.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sunset-relay
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: sunset-relay
  namespace: sunset-relay
  labels:
    app: sunset-relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sunset-relay
  strategy:
    type: Recreate
  template:
    metadata:
      name: sunset-relay
      labels:
        app: sunset-relay
    spec:
      containers:
      - image: "${GHCR_IO_NICOLASCHAN_SUNSET_RELAY_IMAGE}"
        name: sunset-relay
        ports:
        - containerPort: 8443
          protocol: TCP
        volumeMounts:
        - mountPath: "/data"
          name: relay-data-volume
      volumes:
      - name: relay-data-volume
        persistentVolumeClaim:
          claimName: relay-data
---
apiVersion: v1
kind: Service
metadata:
  name: sunset-relay
  namespace: sunset-relay
  labels:
    app: sunset-relay
spec:
  selector:
    app: sunset-relay
  ports:
  - port: 8443
    targetPort: 8443
    protocol: TCP
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: sunset-relay
  namespace: sunset-relay
  annotations:
    "cert-manager.io/cluster-issuer": letsencrypt-prod
    "cert-manager.io/private-key-algorithm": ECDSA
    "traefik.ingress.kubernetes.io/router.entrypoints": "web,websecure"
    "traefik.ingress.kubernetes.io/router.middlewares": "default-hsts-middleware@kubernetescrd,default-https-redirect-middleware@kubernetescrd"
spec:
  rules:
  - host: "relay.sunset.chat"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sunset-relay
            port:
              number: 8443
  tls:
  - hosts:
    - "relay.sunset.chat"
    secretName: sunset-relay-cert
